Fixing weird layout bug + changing font color to #222

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -88,7 +88,7 @@ a:hover, a:active, a:focus {
     clear: both;
 }
 
-.half, .twoquarters, .threesixths { width: 50%; }
+.half, .twoquarters, .threesixths { width: 50% - 1px; }
 
 .onethird, .twosixths { width: 33.333333%; }
 .twothirds, .foursixths { width: 66.666666%; }
@@ -256,7 +256,7 @@ input[type='button']:active, input[type='submit']:active, button:active, .button
   font-size: 2em;
   text-align: center;
   padding: .75em;
-  color: $dark-text-color
+  color: #222
 }
 
 .text {
